# gyroserv

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  how to cmake
arduinofiles/: gyro.ino
arduinofiles/gyro/: gyro.ino
arduinofiles/gyro/gyroTCP/: gyroTCP.ino
arduinofiles/gyro/gyroUDP/: gyroUDP.ino
src/: default_pid_gains  gui.py  mywindow.cpp  mywindow.h  server.cpp
